--- a/react-chart-app/package.json
+++ b/react-chart-app/package.json
@@ -19,7 +19,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "format": "prettier --write '../react-chart-app/**/*.js'"
   },
   "eslintConfig": {
     "extends": [
@@ -40,6 +41,11 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.4",
+    "postcss": "^8.4.12",
+    "prettier": "^2.6.2",
+    "prettier-plugin-tailwindcss": "^0.1.8",
+    "tailwindcss": "^3.0.23",
     "typescript": "^4.5.5"
   }
 }
