--- a/react-chart-app/package.json
+++ b/react-chart-app/package.json
@@ -6,6 +6,8 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@fontsource/roboto": "^4.5.5",
+    "@headlessui/react": "^1.5.0",
+    "@heroicons/react": "^1.0.6",
     "@mui/icons-material": "^5.6.1",
     "@mui/material": "^5.6.1",
     "@testing-library/jest-dom": "^5.16.2",
