--- a/react-chart-app/package.json
+++ b/react-chart-app/package.json
@@ -18,9 +18,11 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.3",
     "react-dom": "^17.0.2",
+    "react-markdown": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-sunburst-d3-v4": "^0.1.6",
+    "react-syntax-highlighter": "^15.5.0",
     "sunburst-chart": "^1.15.3",
     "web-vitals": "^2.1.4"
   },
