--- a/react-chart-app/package.json
+++ b/react-chart-app/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "5.0.0",
     "react-sunburst-d3-v4": "^0.1.6",
     "react-syntax-highlighter": "^15.5.0",
+    "remark-gfm": "^3.0.1",
     "sunburst-chart": "^1.15.3",
     "web-vitals": "^2.1.4"
   },
