--- a/react-chart-app/package.json
+++ b/react-chart-app/package.json
@@ -23,6 +23,10 @@
     "react-scripts": "5.0.0",
     "react-sunburst-d3-v4": "^0.1.6",
     "react-syntax-highlighter": "^15.5.0",
+    "rehype-highlight": "^5.0.2",
+    "rehype-raw": "^6.1.1",
+    "rehype-sanitize": "^5.0.1",
+    "remark-codesandbox": "^0.10.1",
     "remark-gfm": "^3.0.1",
     "sunburst-chart": "^1.15.3",
     "web-vitals": "^2.1.4"
